--- a/src/app/combo-offers/combo-offers.component.html
+++ b/src/app/combo-offers/combo-offers.component.html
@@ -10,7 +10,7 @@
       
   
       <div class="col-sm-5" >
-        <div style="border: 1px solid;margin-left: 30px;;">
+        <div style="border: 1px solid #aeaeae;margin-left: 30px;background: #b7b7b729;">
   <div >
     <h2 style="text-align: left;" class="mainheading combooffheading">Add Today's Combo Offer</h2>
         <div class="row dateselectdivcls" >
@@ -173,7 +173,7 @@
                 <!-- <div class="col-sm-1"></div> -->
                 <!-- <div class="col-sm-8"> -->
                   <!-- <br> -->
-                   <input type="text" (keyup)="RemoveoffercustomnameError()"  id="offercustomname" class="offercustcls" style="padding-top: 11px;width: 120px;height: 24px;text-align: left;padding-left:15px;">
+                   <input type="text" (keyup)="RemoveoffercustomnameError()"  id="offercustomname" class="offercustcls" style="width: 120px;height: 24px;text-align: left;padding-left:3px;">
   
                 <span style="color: red;display: none;text-align: center;" id="offercustomnameError">Enter Offer Name</span>
               <!-- </div> -->
