--- a/src/app/combo-offers/combo-offers.component.scss
+++ b/src/app/combo-offers/combo-offers.component.scss
@@ -112,6 +112,7 @@
     margin-left: 0px !important;
 
   padding:10px;
+  background: #f3f3f3;
 
 }
 
@@ -160,7 +161,7 @@
   }
   .offeramt{
     // margin-left: 10px;
-     width: 127px !important;
+     width: 117px !important;
     //  margin-left: 8px;
    }
   .offerpreg2{
@@ -195,6 +196,7 @@
 
 
  padding:10px;
+ background: #f3f3f3;
 
 }
 .th
