--- a/src/app/my-booking/my-booking.component.html
+++ b/src/app/my-booking/my-booking.component.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-sm-1"></div>
 
-    <div class="col-sm-10">
+    <div class="col-sm-10 table-responsive">
 
 
         <table  class="table table-responsive servicecss" id="user" *ngIf="posts" datatable="ng"  datatable [dtOptions]="dtOptions" style="border:1px solid white; ">
@@ -13,13 +13,13 @@
 
                 <tr>
                   <th  style="display:none;width: 0px;">b</th>
-                <th style="width:13%;font-weight:normal;">Booking Id</th>
-                <th style="width: 17%;font-weight:normal;">Registration No</th>
-                <th style="width:11%;padding: left 9px;font-weight:normal;">Booking Date</th>
-                <th style="width:13%;font-weight:normal;">Shop</th>
-                <th style="width:23%;font-weight:normal;">Booked Status</th>
-                <th style="width:12%;font-weight:normal;">Service Status</th>
-                <th style="width:11%;font-weight:normal;">Total (<span><i class="fa fa-rupee"></i></span>) </th>
+                <th style="width:10%;font-weight:normal;text-align: left;">Booking Id</th>
+                <th style="width: 17%;font-weight:normal;text-align: left;">Registration No</th>
+                <th style="width:11%;padding: left 9px;font-weight:normal;text-align: left;">Booking Date</th>
+                <th style="width:20%;font-weight:normal;text-align: left;">Shop</th>
+                <th style="width:13%;font-weight:normal;text-align: left;">Booked Status</th>
+                <th style="width:12%;font-weight:normal;text-align: left;">Service Status</th>
+                <th style="width:8%;font-weight:normal;text-align: right;">Total (<span><i class="fa fa-rupee"></i></span>) </th>
 
 
 
@@ -36,24 +36,27 @@
             <tbody  style="background-color: #ededed8c;" >
               <tr  *ngFor="let b of  posts| paginate: config ;  let i=index;" style="border:1px solid #aeaeae; background-color: #ededed8c;">
                 <td style="display:none;width: 0px;">{{b.id}}</td>
-               <td><a style="cursor: pointer;color: #000000; text-decoration:underline;font-weight: 500;"  (click)="ViewDetailsPopup(b.Booking_id,'My Booking')" >{{b.Booking_id}}</a></td>
+               <td><a style="cursor: pointer;color: #000000; text-decoration:underline;font-weight: 500;text-align: left;margin-left: 8px;"  (click)="ViewDetailsPopup(b.Booking_id,'My Booking')" >{{b.Booking_id}}</a></td>
                <!-- <td><a style="cursor: pointer;color: #26a0fc;">{{b.Booking_id}}</a></td> -->
-                <td>{{b.vehicle_number}} - 
+                <td><p style="margin-left: 10px;">{{b.vehicle_number}} - 
                   <span *ngFor="let m1 of  MasterModelData1;" >
                
                     <span *ngIf="b.modelname === m1.id"> {{m1.model_name}}</span>
                   </span>
+                </p>
                   </td>
-                <td>{{b.bookingdate | date: 'dd-MM-yyyy'}} </td>
-                <td>{{b.shopname}} </td>
+                <td><p style="margin-left: 8px;">{{b.bookingdate | date: 'dd-MM-yyyy'}}</p> </td>
+                <td><p style="margin-left: 8px;">{{b.shopname}} </p></td>
                 <td>
+                  <p style="margin-left: 8px;">
                   <span style="color: black" *ngIf="b.booked_status == ''">Booking under confirmation</span>
                   <span style="color: green;font-weight: bold;" *ngIf="b.booked_status == 'Accepted'">{{b.booked_status}}</span>
                   <span style="color: red;font-weight: bold;" *ngIf="b.booked_status == 'Rejected'">{{b.booked_status}}</span>
-                  </td>
+                </p>
+               </td>
                 <td style="font-weight: bold;">
 
-                    <div *ngFor="let m1 of carwashstatus1;let index i" >
+                    <div *ngFor="let m1 of carwashstatus1;let index i" style="margin-left: 8px;">
 
 
       <span *ngIf="b.carwash_status === m1.id">
@@ -74,7 +77,7 @@
 
                   </td>
 
-                <td>{{b.payable_amt}}</td>
+                <td><p style="text-align: right;margin-right: 11px;">{{b.payable_amt}}</p></td>
 
               </tr>
 
