--- a/src/app/onlinebooking/onlinebooking.component.html
+++ b/src/app/onlinebooking/onlinebooking.component.html
@@ -12,18 +12,18 @@
   <form [formGroup]="onlinebooking" class="form-container" >
       <mat-card style="border: 1px solid #aeaeae;">
 
-        <mat-card-header>
+        <!-- <mat-card-header>
           <mat-card-title>
-            <!-- <h4 class="subheading" style="color:skyblue;margin-left: -17px;">Enter Your Details_____</h4> -->
+            
             <h2 class="mainheading" style=" margin-top: -17px;">  Booking Details</h2>
             </mat-card-title>
-        </mat-card-header>
+        </mat-card-header> -->
 
 
         <div class="row" style="padding-top: 10px;padding-bottom: 10px;margin-left: -1px;">
           <div class="col-sm-7">
 
-
+            <h2 class="mainheading" style="">  Booking Details</h2>
           <div class="table-responsive">
             <table>
 
