--- a/src/app/shop-profile/shop-profile.component.scss
+++ b/src/app/shop-profile/shop-profile.component.scss
@@ -241,6 +241,9 @@
   }
 
 @media screen and (min-width: 768px){
+    .workinghoursupdcls{
+        margin-left: -5px;
+    }
     .shopzipcodecls2{
        
         margin-left: 52px;
