--- a/src/app/shopdashboard/shopdashboard.component.html
+++ b/src/app/shopdashboard/shopdashboard.component.html
@@ -164,7 +164,7 @@
         </div>
 <br>
         <div class="accordion2">
-          <h2 class="title2 subheading"  (click)="opened2 = !opened2">Today's Offers<i class="fa fa-chevron-down"></i> </h2>
+          <h2 class="title2 subheading"  (click)="opened2 = !opened2">Active Offers<i class="fa fa-chevron-down"></i> </h2>
           <div class="content-container2" [class.opened2]="opened2">
             <div class="row" style="margin-left: -162px;">
               <div class="col-sm-6" *ngIf="currentOffer1 != ''">
@@ -185,17 +185,17 @@
                     </div>
                   </div>
                   </div>
-                  <div class="col-sm-3" ></div>
+                  <!-- <div class="col-sm-3" ></div> -->
                 </div>
 
 
               </div>
 
-              <div class="col-sm-6" *ngIf="serviceDataOffers1 !=''">
+              <div class="col-sm-5" *ngIf="serviceDataOffers1 !=''" style="margin-left: -254px;">
                 <h2 style="text-align: center;" class="mainheading">Services Offers</h2>
                 <div class="row">
                   <div class="col-sm-1" ></div>
-                  <div class="col-sm-10" >
+                  <div class="col-sm-7" >
                     <div style="border: 1px solid #aeaeae;height: 317px;" >
                     <div id="chart2">
                       <apx-chart
@@ -209,9 +209,31 @@
                     </div>
                   </div>
                   </div>
-                  <div class="col-sm-1" ></div>
+                  <!-- <div class="col-sm-1" ></div> -->
                 </div>
+             </div>
 
+
+             <div class="col-sm-6" *ngIf="serviceDataOffers1 !=''">
+              <div class="row" >
+                <div class="col-sm-4" ></div>
+                <div class="col-sm-4" style="text-align: center;">
+                  <h2 style="text-align: center;" class="mainheading"> Combo Offers- Customer Booking Details</h2>
+                  <div style="border: 1px solid #aeaeae;">
+                  <div id="chart" style="text-align: center;">
+                    <apx-chart
+                      [series]="chartOptions3.series"
+                      [chart]="chartOptions3.chart"
+                      [dataLabels]="chartOptions3.dataLabels"
+                      [plotOptions]="chartOptions3.plotOptions"
+                      [xaxis]="chartOptions3.xaxis"
+                    ></apx-chart>
+                  </div>
+                </div>
+                </div>
+                <div class="col-sm-4" ></div>
+              </div>
+           </div>
 
 
               </div>
@@ -219,12 +241,10 @@
 
 
 
-
-
-
             </div>
             <div>
 
+            </div>
             </div>
 <br>
 
