Abi- shopservice change

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -356,7 +356,7 @@ input[type=number] {
 }
 .ngx-pagination .current {
   padding: 0.1875rem 0.625rem;
-  background:brown !important;
+  background: gray !important;
   color: #fefefe;
   cursor: default;
 }
