--- a/src/app/shop-service/shop-service.component.html
+++ b/src/app/shop-service/shop-service.component.html
@@ -21,17 +21,17 @@
                 </tr>
                 <tr style="color: black;">
                 <th style="width:40px;" class="fontwghtcls">Sl. No.</th>
-                <th style="width:150px;text-align: left;padding-left:25px !important;" class="fontwghtcls">Service Name</th>
-                <th style="width:70px;" class="fontwghtcls">Service Status	 </th>
-                <th style="width:150px;" class="fontwghtcls">Model </th>
-                <th style="width:90px;" class="fontwghtcls">Service Amount (<span><i class="fa fa-rupee"></i></span>)</th>
+                <th style="width:150px;text-align: left;padding-left:40px !important;" class="fontwghtcls">Service Name</th>
+                <th style="width:70px;text-align: left;" class="fontwghtcls">Service Status	 </th>
+                <th style="width:150px;text-align: left;padding-left: 33px !important;" class="fontwghtcls">Model </th>
+                <th style="width:90px;text-align: left;" class="fontwghtcls">Service Amount <span><i class="fa fa-rupee"></i></span></th>
 
                 <th  style="width:100px;border-right:solid 1px;" class="fontwghtcls">Update</th>
 
-                <th style="width:85px;" class="fontwghtcls">Offer(%) </th>
-                <th style="width:85px;" class="fontwghtcls">Offer Price (<span><i class="fa fa-rupee"></i></span>)</th>
-                <th style="width:35px;" class="fontwghtcls">Start Date</th>
-                <th style="width:35px;" class="fontwghtcls">End Date</th>
+                <th style="width:85px;text-align: left;padding-left: 31px !important;" class="fontwghtcls">Offer(%) </th>
+                <th style="width:85px;text-align: left;padding-left: 20px !important;" class="fontwghtcls">Offer Price (<span><i class="fa fa-rupee"></i></span>)</th>
+                <th style="width:35px;text-align: left;padding-left: 50px !important;" class="fontwghtcls">Start Date</th>
+                <th style="width:35px;text-align: left;padding-left: 50px !important;" class="fontwghtcls">End Date</th>
                 <th  style="width:100px;" class="fontwghtcls">Update</th>
               </tr>
             </thead>
@@ -39,8 +39,8 @@
               <tr *ngFor="let service of  serviceData1 | paginate: config ;  let i=index;" >
 
                 <td>{{i+1}}</td>
-                <td ><input id="service_{{service.service_id}}__{{i}}" type="number" value="{{service.service_id}}"  style="width: 60px;" hidden><input id="servicename_{{service.service_id}}_{{i}}" type="text" value="{{service.service_name}}"  style="width: 250px;border:none;text-align: left;padding-left:21px;" readonly></td>
-                <td >
+                <td ><input id="service_{{service.service_id}}__{{i}}" type="number" value="{{service.service_id}}"  hidden><input id="servicename_{{service.service_id}}_{{i}}" type="text" value="{{service.service_name}}"  style="width: 250px;border:none;text-align: left;padding-left:21px;" readonly></td>
+                <td style="text-align: left;padding-left:21px;">
 
                   <span *ngIf="service.status == '1'">&nbsp;</span>
                   <label class="switch" *ngIf="service.status == '1'"  (click)="changeServiceStatus(service.id,service.status)">
@@ -56,8 +56,8 @@
 
 
                                     </td>
-                <td>  <input id="model_{{service.service_id}}_{{i}}" type="number" value="{{service.model_id}}"  style="width: 60px;" hidden> <input id="modelname_{{service.service_id}}_{{i}}" type="text" value="{{service.model_name}}"  style="width: 150px;border:none;text-align: center;background-color: #fff;" readonly></td>
-                <td> <input id="amount_{{service.service_id}}_{{i}}"   type="number" min="0" value="{{service.actual_amount}}" (keyup)="removevalidateMsg(service.service_id)" style="width: 60px;">
+                <td>  <input id="model_{{service.service_id}}_{{i}}" type="number" value="{{service.model_id}}"  style="width: 60px;" hidden> <input id="modelname_{{service.service_id}}_{{i}}" type="text" value="{{service.model_name}}"  style="width: 150px;border:none;text-align: left;padding-left:21px;background-color: #fff;" readonly></td>
+                <td style="text-align: left;"> <input id="amount_{{service.service_id}}_{{i}}"   type="number" min="0" value="{{service.actual_amount}}" (keyup)="removevalidateMsg(service.service_id)" style="width: 60px;">
                   <p id="validateamount_{{service.service_id}}_{{i}}" style="color: red;display: none;font-size:10px;"> Enter the Amount</p>
                   <p id="validateamount1_{{service.service_id}}_{{i}}" style="color: red;display: none;font-size:10px;"> Enter the valided service Amount</p>
                 </td>
@@ -71,7 +71,7 @@
                       <!-- <button   class="allSubmitbtn" style="border-radius: 21px;width: 60px;border: none;height: 22px;font-weight:bold;opacity:.65" id="updatebtn_{{service.service_id}}_{{i}}" (click)="UpdateServiceAmount(service.service_id,i)" disabled>Update</button> -->
                     </ng-template>
                     </td>
-                <td>
+                <td >
                  &nbsp; <input   type="number"    class="offerptage"  (click)="removeoffervalidata(service.service_id,i)"  id="offer_{{service.service_id}}_{{i}}" #term  value="{{service.offer_percent}}"  (keyup)="getOfferPrice(term.value,term.id)">
                  <p id="validateoffer_{{service.service_id}}_{{i}}" style="color: red;display: none;font-size:10px;"> Enter the Offer %</p>
                  <p id="validateoffer1_{{service.service_id}}_{{i}}" style="color: red;display: none;font-size:10px;">0% offer not accepted</p>
@@ -129,7 +129,7 @@
 
 
 
-    <div style="border: 1px solid;overflow:auto;">
+    <!-- <div style="border: 1px solid;overflow:auto;"> -->
       <!-- <h2 style="text-align: center;" class="mainheading">Add Service Price</h2> -->
     <form [formGroup]="shopserviceForm" name="pf">
      <div class="table-responsive  boxwidht" style="display: block;width: 100%;overflow-x: unset;padding-top: 10px;height:  56px;" id="shopservFormid" >
@@ -192,7 +192,7 @@
           <td>
             <!-- <label class="customerProfileLbl" style="width: 100px;">Amount</label> -->
 
-             <input type="number" min="1"   style="padding-left: 2px !important;"  id="newamount" class="lastname" placeholder="" formControlName="actual_amount" style="width: 60px;">
+             <input type="number" min="1"   style="padding-left: 2px !important;"  id="newamount" class="lastname" placeholder="" formControlName="actual_amount" style="width: 60px;height: 25px;">
               <div *ngIf="shopserviceForm.controls['actual_amount'].touched && shopserviceForm.controls['actual_amount'].invalid ">
 
                 <div *ngIf="shopserviceForm.controls['actual_amount'].errors" style="color: red;">
@@ -219,7 +219,7 @@
           </div>
         </form>
 
-      </div>
+      <!-- </div> -->
   </div>
 
 
@@ -232,7 +232,7 @@
     <div class="accordion1">
       <h2 class="title1 subheading" style="text-align: left;" (click)="opened1 = !opened1">Add New Service <i class="fa fa-chevron-down"></i> </h2>
       <div class="content-container1" [class.opened1]="opened1">
-    <div style="border: 1px solid;margin-left:0px!important;height: 68px;">
+    <!-- <div style="border: 1px solid;margin-left:0px!important;height: 68px;"> -->
       <!-- <h2 style="text-align: center;" class="mainheading">Add New Service</h2> -->
       <form [formGroup]="MasterserviceForm" name="pf">
       <div class="table-responsive boxwidht" style="display: block;width: 100%;overflow-x: unset;padding-top: 3px;height: 100px;" id="shopservFormid2">
@@ -282,7 +282,7 @@
 
             </div>
           </form>
-    </div>
+    <!-- </div> -->
 
 
 
@@ -293,10 +293,10 @@
   </div>
 <br><br>
 </div>
-<div class="row"  style="margin-bottom: 10px;"  >
+<div class="row"  style="margin-bottom: -8px; margin-top: -19px ! important;"  >
   <!-- <div *ngIf="let data of  statuspickupvalue;" > -->
 
-  <label class="switch subheading" style="white-space:nowrap;margin-left: 18px;" >Do you provide pick & drop service?
+  <label class="switch subheading" style="white-space:nowrap;margin-left: 18px;" >Do you provide pick & drop service?&nbsp;&nbsp;
 
    <!-- {{statuspickupvalue}} -->
 
