--- a/src/app/shop-service/shop-service.component.scss
+++ b/src/app/shop-service/shop-service.component.scss
@@ -91,6 +91,7 @@ tr
   width:100%;
   // margin-left:275px;
   margin-left: 30px;
+  height:  125px !important;
   padding:10px;
 
 }
@@ -123,6 +124,7 @@ max-height: none;
   // margin: 12px;
   // margin-left:80px;
   width:94%;
+  height:  125px !important;
   // margin-left:275px;
   // height: 163px;
   margin-left: 30px;
