abi - combo offer changes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -321,9 +321,9 @@ input[type=number] {
   }
 
 
-  .table {
-    //border: 0.5px solid #000000 !important;
-  }
+  // .table {
+  //   //border: 0.5px solid #000000 !important;
+  // }
 
   .dataTables_wrapper .dataTables_filter {
 
