abi - booking page changes

--- a/src/app/shopowner-onlinebooking/shopowner-onlinebooking.component.html
+++ b/src/app/shopowner-onlinebooking/shopowner-onlinebooking.component.html
@@ -156,7 +156,7 @@
                 <label >Pick-up Date <span class="requiredfield">  *</span></label>
     <br>
 
-    <input class="datecls" min="{{current_date}}" type="date" (change)="datapicker()" style="border: 1px solid;height: 34px;width: 116px;" matinput="" formControlName="pickup_date" id="pickup_dateid2" placeholder="Date From" >
+    <input class="datecls" min="{{current_date}}" type="date" (change)="dropdatapicker()" style="border: 1px solid;height: 34px;width: 116px;" matinput="" formControlName="pickup_date" id="pickup_dateid2" placeholder="Date From" >
 </div>
               </td>
 
