--- a/src/app/shop-profile/shop-profile.component.html
+++ b/src/app/shop-profile/shop-profile.component.html
@@ -181,7 +181,7 @@
 
                 <div class="col-sm-12 form-inline" style="text-align: right;">
             
-                    <button class="btn btn-success allSubmitbtn" style="margin-right: 14px;" (click)="updateshopinfo(shopprofile1.value)" [disabled]='!shopprofile1.valid' >Update</button>
+                    <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;font-weight: bold;" (click)="updateshopinfo(shopprofile1.value)" [disabled]='!shopprofile1.valid' >Update</button>
                     <!-- [disabled]='!shopprofile.valid' -->
                     
             
@@ -368,7 +368,7 @@
 
                 <div class="col-sm-12 form-inline" style="text-align: right;">
             
-                    <button class="btn btn-success allSubmitbtn" style="margin-right: 14px;" (click)="uploadFile(shopprofile.value)" [disabled]='!shopprofile.valid' >Update</button>
+                    <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;font-weight: bold;" (click)="uploadFile(shopprofile.value)" [disabled]='!shopprofile.valid' >Update</button>
                     <!-- [disabled]='!shopprofile.valid' -->
                     
             
@@ -451,7 +451,7 @@
 <br>
                             <div class="col-sm-11 form-inline workinghoursupdcls" style="text-align: right;">
             
-                                <button class="btn btn-success allSubmitbtn" style="margin-right: 14px;" (click)="updateworkinghours(shopprofile2.value)" [disabled]='!shopprofile2.valid' >Update</button>
+                                <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;font-weight: bold;" (click)="updateworkinghours(shopprofile2.value)" [disabled]='!shopprofile2.valid' >Update</button>
                                 <!-- [disabled]='!shopprofile.valid' -->
                                 
                         
