--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,6 +55,25 @@ body {
   width: 93% !important;
 }
 
+.apexcharts-legend {
+  // justify-content: center !important;
+  // top: 156px !important;
+  // width: 52%;
+  
+}
+
+.apexcharts-canvas {
+  // position: relative;
+  // user-select: none;
+  // margin-top: 100px;
+}
+
+.apexcharts-legend {
+  
+  //  top: 198px !important; 
+  // right: 250px !important;
+}
+
 @media screen and (min-width: 768px) {
   .mat-autocomplete-panel.mat-autocomplete-visible {
     visibility: visible;
