--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,12 @@
 //     right: 0;
 //     background: rgb(155, 184, 26);
 //     }
+.is-active {
+    color: red !important;
+    font-weight: bold;
+}
+
+
 .touch
 {
     color: #ec0c1f;
