--- a/src/app/testimonial-add/testimonial-add.component.html
+++ b/src/app/testimonial-add/testimonial-add.component.html
@@ -56,7 +56,7 @@
               <br>
               <div class="col-sm-9"></div>
               <div class="col-sm-3">
-                <button class="allSubmitbtn btn"  [disabled]='!testimonialForm.valid' >Add</button>
+                <button class="allSubmitbtn btn" style="width: 68px !important;border: none;height: 28px !important;"  [disabled]='!testimonialForm.valid' >Add</button>
               </div>
                 
             </div>
