--- a/src/app/customer-create/customer-create.component.html
+++ b/src/app/customer-create/customer-create.component.html
@@ -285,9 +285,9 @@
             </div>
 
 
-            <div class="col-sm-12 form-inline webonlybtn" style="text-align: right;margin-left: 4px;">
+            <div class="col-sm-12 form-inline webonlybtn" style="text-align: right;margin-left: -16px;">
         <br>
-                <button class="btn carwashbtn  btn-success1" (click)="uploadFile(profileform.value)" [disabled]='!profileform.valid'>Update</button>
+                <button class="allSubmitbtn btn" style="width: 68px !important;border: none;height: 28px !important;"  (click)="uploadFile(profileform.value)" [disabled]='!profileform.valid'>Update</button>
 
 
             </div>
@@ -456,9 +456,9 @@
           </div>
 
 
-          <div class="col-sm-12 form-inline webbuttonAddCustomer" style="text-align: right;margin-left: 4px;">
+          <div class="col-sm-12 form-inline webbuttonAddCustomer" style="text-align: right;margin-left: -16px;">
 
-            <button class="btn carwashbtn  btn-success1" (click)="AddCustomerCarDetails(cardetailForm.value)"  [disabled]='!cardetailForm.valid'>Add</button>
+            <button class="allSubmitbtn btn" style="width: 68px !important;border: none;height: 28px !important;"  (click)="AddCustomerCarDetails(cardetailForm.value)"  [disabled]='!cardetailForm.valid'>Add</button>
 
 
         </div>
