--- a/src/app/my-booking/my-booking.component.scss
+++ b/src/app/my-booking/my-booking.component.scss
@@ -1,3 +1,7 @@
+table.dataTable tbody th, table.dataTable tbody td {
+  padding: 2px 10px;
+}
+
 .custom-btn {
     cursor: pointer;
     margin-right: 25px;
